--- a/RestAPIDB/appsettings.json
+++ b/RestAPIDB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=localhost;Database=KitchenItemsDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=kitchenItems;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
